[package]
name = "qanat"
version = "0.1.0"
edition = "2024"

[features]
default = []
cbor = ["dep:ciborium"]
msgpack = ["dep:rmp-serde"]
nats = ["dep:async-nats"]
nng = ["dep:nng"]
redis = ["dep:redis"]
rabbitmq = ["dep:lapin"]

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = { version = "0.38", optional = true }
ciborium = { version = "0.2", optional = true }
nng = { version = "1.0", optional = true }
redis = { version = "1.2.2", features = ["tokio-comp"], optional = true }
rmp-serde = { version = "1", optional = true }
lapin = { version = "4.10.0", default-features = false, features = ["tokio"], optional = true }
